--- a/client/src/pages/Main/tasks/tasks.css
+++ b/client/src/pages/Main/tasks/tasks.css
@@ -3,28 +3,25 @@
 }
 
 .taskItem {
-    display: block;
     background-color: #BCBDC0;
     border: 1px solid black;
     border-radius: 5px;
-
-    margin: 5px 0 5px 0;
-    overflow: scroll;
-}
-
-.taskHeader {
-    width: 100%;
     font-size: smaller;
+
+    margin: 5px 0;
     padding: 5px;
 }
 
 .taskDeleteBtn {
     border: 1px solid black;
     border-radius: 4px;
-    font-size: smaller;
-    float: right;
+
     width: 20px;
     height: 20px;
+}
+
+.dueInfo {
+    font-size: x-small;
 }
 
 .taskDetails {
@@ -36,10 +33,8 @@
     border: 1px solid black;
     border-radius: 5px;
 
-    padding: 5px 10px 5px 10px;
+    padding: 5px 10px;
     margin-top: 10px;
-
-    display: block;
 }
 
 .taskInput {
@@ -47,14 +42,12 @@
     border-radius: 3px;
     display: block;
     width: 100%;
-    margin-bottom: 5px;
 }
 
 .inputDate {
     border: 1px solid black;
     border-radius: 3px;
     width: 150px;
-    margin: 0 5px 5px 0;
 }
 
 .inputTime {
