--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -12,6 +12,6 @@
     width: 191px;
 
     background-color: white;
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 5px;
 }
