--- a/client/src/pages/Main/tasks/tasks.css
+++ b/client/src/pages/Main/tasks/tasks.css
@@ -33,8 +33,12 @@
     border: 1px solid black;
     border-radius: 5px;
 
-    padding: 5px 10px;
+    padding: 5px 0;
     margin-top: 10px;
+}
+
+.taskFormRow {
+    margin: 3px 0;
 }
 
 .taskInput {
