--- a/client/src/pages/Main/tasks/tasks.css
+++ b/client/src/pages/Main/tasks/tasks.css
@@ -33,7 +33,7 @@
     border: 1px solid black;
     border-radius: 5px;
 
-    padding: 5px 0;
+    padding: 5px 5px;
     margin-top: 10px;
 }
 
@@ -51,7 +51,7 @@
 .inputDate {
     border: 1px solid black;
     border-radius: 3px;
-    width: 150px;
+    width: 80%;
 }
 
 .inputTime {
